--- a/package.json
+++ b/package.json
@@ -1,28 +1,38 @@
 {
   "name": "expense-traker",
-  "version": "1.0.0",
-  "description": "expense tracker app",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "sever": "nodemon server.js" , 
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server.js\" \"npm run client\""
-  },
-  "author": "me",
-  "license": "ISC",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "colors": "^1.4.0",
-    "did-you-mean": "0.0.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "mongoose": "^6.1.2",
-    "morgan": "^1.10.0"
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.2"
   },
-  "devDependencies": {
-    "concurrently": "^6.5.1",
-    "nodemon": "^2.0.15",
-    "ws": "3.3.2"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
